# Orchard

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  Untitled-1.ipynb  pyproject.toml  setup.py
benchmarks/: benchmark_llm_simulation.py  benchmark_metal.py
docs/: BENCHMARKS.md  BUILD.md  STATUS.md  VALUATION_AND_RELEASE.md
examples/: full_test.py  simple_test.py  test_package.py
orchard/: __init__.py  cli.py  loader.py  model.py  optimizer.py  quantizer.py
orchard/kernels/: gemm_int4.metal  gemv_int4.metal  matmul.metal  matmul_simd.metal  rmsnorm.metal
src/: bindings.cpp  main.cpp
src/kernels/: elementwise.metal  embedding.metal  gemv_int8.metal  rope.metal  softmax.metal
src/platform/: metal_backend.h  metal_backend.mm
src/runtime/: kv_cache.cpp  kv_cache.h  model.cpp  model.h  tensor.cpp  tensor.h
tests/: test_structure.py
